--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
+    "cloudinary": "^1.37.3",
     "clsx": "^1.2.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "fs": "^0.0.1-security",
     "next": "13.4.5",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
