--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "fs": "^0.0.1-security",
+    "imagemin": "^8.0.1",
+    "imagemin-jpegtran": "^7.0.0",
     "next": "13.4.5",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
@@ -30,6 +32,8 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/imagemin": "^8.0.1",
+    "@types/imagemin-jpegtran": "^5.0.1",
     "@types/nprogress": "^0.2.0",
     "husky": "^8.0.3"
   }
