--- a/package.json
+++ b/package.json
@@ -15,25 +15,23 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
+    "blurhash": "^2.0.5",
     "cloudinary": "^1.37.3",
     "clsx": "^1.2.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "fs": "^0.0.1-security",
-    "imagemin": "^8.0.1",
-    "imagemin-jpegtran": "^7.0.0",
     "next": "13.4.5",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@types/imagemin": "^8.0.1",
-    "@types/imagemin-jpegtran": "^5.0.1",
     "@types/nprogress": "^0.2.0",
     "husky": "^8.0.3"
   }
