--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,7 @@
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
+NEXTAUTH_SECRET=
+NEXTAUTH_URL=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
