--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "13.4.5",
     "fs": "^0.0.1-security",
     "next": "13.4.5",
+    "next-auth": "^4.22.1",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
     "postcss": "8.4.24",
