--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "fs": "^0.0.1-security",
-    "next": "13.4.5",
+    "next": "^13.4.9",
     "next-auth": "^4.22.1",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
