--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sharp": "^0.32.1",
+    "tailwind-gradient-mask-image": "^1.0.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
